# wired-notify

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  home-manager.nix  installer.sh  rust-toolchain.toml  shell.nix  wired.ron  wired.service  wired_multilayout.ron
.github/workflows/: build.yml  nix.yml  update-flake-lock.yml
aur/wired/: PKGBUILD  upgrade_guide
aur/wired-bin/: PKGBUILD
aur/wired-git/: PKGBUILD
shaders/: base.glslf  base.glslv
src/: cli.rs  config.ron  config.rs  config.toml  icons.rs  main.rs  manager.rs  maths_utility.rs  wiry.ron
src/bus/: bus.xml  dbus.rs  dbus_codegen.rs  message.rs  mod.rs  receiver.rs
src/config/: mod.rs
src/management/: mod.rs
src/maths/: mod.rs
src/maths_utility/: mod.rs
src/notification/: management.rs  mod.rs  notification.rs
src/rendering/: drawing.rs  layout.rs  maths.rs  mod.rs  sdl.rs  text.rs  window.rs
src/rendering/blocks/: button_block.rs  image_block.rs  mod.rs  notification_block.rs  progress_block.rs  scrollable_text_block.rs  scrolling_text_block.rs  text_block.rs
src/types/: maths.rs  mod.rs  tree.rs
wired_derive/: Cargo.toml
wired_derive/src/: lib.rs
wiry_derive/: Cargo.toml
wiry_derive/src/: lib.rs
