[package]
name = "wired"
version = "0.10.2"
authors = ["Michael Palmos <toqoz@hotmail.com>"]
edition = "2021"

[dependencies]
wired_derive = { path = "./wired_derive" }

winit = "0.26.0"
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
x11 = { version = "2.18.1", features = ["xlib", "xss"] }
pango = "0.15.2"
pangocairo = "0.15.1"
cairo-rs = "0.15.1"
cairo-sys-rs = { version = "0.15.1", features = ["xlib"] }
xdg = "2.2.0"

getopts = "0.2"
chrono = "0.4.19"
image = "0.22.2"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.0"
serde_json = "1.0"
notify = "4.0.15"
bitflags = "1.2"
